--- a/application.yml
+++ b/application.yml
@@ -4,7 +4,7 @@ spring:
     mongodb:
       host: localhost
       port: 27017
-      database: librarydb
+      database: lib_system
   zipkin:
     base-url: http://localhost:9411/
 
